MB-7950 Fix CSS for shipment cards to have correct bottom spacing

--- a/src/pages/Office/ServicesCounselingMoveDetails/ServicesCounselingMoveDetails.module.scss
+++ b/src/pages/Office/ServicesCounselingMoveDetails/ServicesCounselingMoveDetails.module.scss
@@ -30,4 +30,8 @@
       align-self: center;
     }
   }
+
+  .marginBottomTwo {
+    @include u-margin-bottom(2)
+  }
 }
