--- a/src/styles/shipmentCards.module.scss
+++ b/src/styles/shipmentCards.module.scss
@@ -5,12 +5,12 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%; // required to wrap in IE11
+  @include u-margin-bottom(4);
 
   > * {
     flex-grow: 1;
     flex-shrink: 1;
     width: 100%;
-    @include u-margin-bottom(4);
 
     @include at-media('tablet-lg') {
       &:not(:only-child) {
@@ -22,7 +22,5 @@
         }
       }
     }
-
-    @include u-margin-bottom(4);
   }
 }
